--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,9 +19,7 @@ and open the template in the editor.
       <script src="http://code.highcharts.com/modules/exporting.js"></script>
      
       <script src="js/graphicTheme.js"></script>
-      <script src="js/graphic.js">
-         
-      </script>
+      <script src="js/graphic.js"></script>
 
     </body>
 </html>
